@@ -1,3 +1,10 @@
+2008-10-09  Dan Williams  <dcbw@redhat.com>
+
+	* src/gconf-helpers/gconf-helpers.c
+	  src/gconf-helpers/gconf-helpers.h
+		- 'network' -> 'setting'; 'network' was left over from 0.6 when SSIDs
+			were part of the GConf path
+
 2008-10-08  Alexander Sack  <asac@ubuntu.com>
 
 	* src/connection-editor/page-ip4.c
